[gd_scene load_steps=5 format=2]

[ext_resource path="res://PopupMenu.gd" type="Script" id=1]
[ext_resource path="res://mainTheme.tres" type="Theme" id=2]
[ext_resource path="res://fonts/pixelate/SFPixelate-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font" ]

[node name="PopupMenu" type="Control"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Panel" type="Panel" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 3.0
margin_right = 751.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 2
theme = ExtResource( 2 )
_sections_unfolded = [ "Size Flags", "Theme", "Visibility" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 254.0
margin_bottom = 94.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
_sections_unfolded = [ "Rect" ]

[node name="ButtonResume" type="Button" parent="Panel/VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 244.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.379899, 0.933594, 0.0364685, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "RESUME"
flat = false
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="ButtonRestart" type="Button" parent="Panel/VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 244.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.816406, 0.787879, 0.0861053, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "RESTART"
flat = false
_sections_unfolded = [ "custom_colors" ]

[node name="ButtonMenu" type="Button" parent="Panel/VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 244.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.123688, 0.576657, 0.753906, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "MAIN_MENU"
flat = false
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="ButtonQuit" type="Button" parent="Panel/VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 244.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "QUIT"
flat = false
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[connection signal="pressed" from="Panel/VBoxContainer/ButtonResume" to="." method="_on_ButtonResume_pressed"]

[connection signal="pressed" from="Panel/VBoxContainer/ButtonRestart" to="." method="_on_ButtonRestart_pressed"]

[connection signal="pressed" from="Panel/VBoxContainer/ButtonMenu" to="." method="_on_ButtonMenu_pressed"]

[connection signal="pressed" from="Panel/VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]


